# f411ce_embassy_blinky

./: Cargo.toml  Embed.toml  README.md
.cargo/: config.toml
src/: main.rs
