[package]
name = "f411ce_embassy_blinky"
license = "MIT"
version = "0.1.0"
edition = "2024"

[dependencies]
embassy-executor = { version = "0.9.1", features = [
    "defmt",
    "arch-cortex-m",
    "executor-thread",
    "executor-interrupt",
] }
embassy-stm32 = { version = "0.4.0", features = [
    "defmt",
    "stm32f411ce",
    "memory-x",
    "time-driver-any",
    "exti",
] }
embassy-time = { version = "0.5.0", features = [
    "defmt",
    "defmt-timestamp-uptime-us",
    # "tick-hz-32_768",     # standard tick-1_000_000
] }
# embassy-sync = { version = "0.6.0", features = ["defmt"] }
# embassy-futures = { version = "0.1.1", features = ["defmt"] }
# embassy-usb = { version = "0.3.0", features = ["defmt"] }

defmt = "1.0.1"
defmt-rtt = "1.1.0"

cortex-m-rt = "0.7.5"
cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }
panic-probe = { version = "1.0.0", features = ["print-defmt"] }

# https://embassy.dev/book/#_cargo_toml_2
# git ls-remote https://github.com/embassy-rs/embassy.git HEAD
# [patch.crates-io]
# embassy-time = { git = "https://github.com/embassy-rs/embassy", rev = "e145a653cf9d31f101b0735406b8b7c9208bc1da" }
# embassy-executor = { git = "https://github.com/embassy-rs/embassy", rev = "e145a653cf9d31f101b0735406b8b7c9208bc1da" }
# embassy-stm32 = { git = "https://github.com/embassy-rs/embassy", rev = "e145a653cf9d31f101b0735406b8b7c9208bc1da" }
# embassy-sync = { git = "https://github.com/embassy-rs/embassy", rev = "e145a653cf9d31f101b0735406b8b7c9208bc1da" }
# embassy-usb = { git = "https://github.com/embassy-rs/embassy", rev = "e145a653cf9d31f101b0735406b8b7c9208bc1da" }
# embassy-futures = { git = "https://github.com/embassy-rs/embassy", rev = "e145a653cf9d31f101b0735406b8b7c9208bc1da" }

[profile.dev]
opt-level = 1               # default = 0
# debug = 2                   # default = 2
# codegen-units = 16          # default = 16
# debug-assertions = true     # default = true
# overflow-checks = true      # default = true
# lto = false                 # default = false
# incremental = true          # default = true
panic = 'abort'             # default = "unwind"

[profile.release]
# opt-level = 3               # default = 3
debug = 2                   # default = 0
codegen-units = 1           # default = 16
lto = "fat"                 # default = false
# debug-assertions = false    # default = false
# overflow-checks = false     # default = false
# strip = true                # default = false
# incremental = false         # default = false
# panic = "unwind"            # default = "unwind"